--- a/login.html
+++ b/login.html
@@ -14,16 +14,16 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background: linear-gradient(to right, #ff6f61, #3366ff);
+            background: linear-gradient(135deg, #55544c, #2f74a1);
             font-family: 'Raleway', sans-serif;
         }
 
         .form-container {
             background-color: #333;
-            padding: 60px; /* Adjusted padding for the container */
+            padding: 60px;
             border-radius: 12px;
             box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
-            width: 400px; /* Increased width of the container */
+            width: 400px;
             text-align: center;
         }
 
@@ -40,12 +40,12 @@
 
         .form-group input[type="text"],
         .form-group input[type="password"] {
-            width: 100%;
-            padding: 20px; /* Reduced padding for better fit */
+            width: 90%;
+            padding: 20px;
             margin-top: 8px;
             border: none;
             border-radius: 20px;
-            font-size: 18px; /* Increased font size */
+            font-size: 18px;
             background-color: #222;
             color: #fff;
             box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);
@@ -60,10 +60,10 @@
 
         .form-group button {
             width: 100%;
-            padding: 15px; /* Reduced padding for button */
+            padding: 15px;
             border: none;
             border-radius: 50px;
-            background-color: #00cc99;
+            background-color: #ffd700;
             color: white;
             font-size: 20px;
             cursor: pointer;
@@ -75,9 +75,9 @@
         }
 
         .form-group a {
-            color: #28a7c7; /* Updated color for the 'Forgot password?' */
+            color: #28a7c7;
             text-decoration: none;
-            font-size: 16px; /* Adjusted font size */
+            font-size: 16px;
             margin-top: 10px;
             display: block;
         }
@@ -99,34 +99,28 @@
         }
 
         .social-icons a:hover {
-            color: #00cc99;
-        }
-
-        /* Portal box styling */
-        .portal-box {
-            background-color: #444;
-            padding: 20px;
-            margin-bottom: 20px;
-            border-radius: 20px;
+            color: #ffd700;
         }
 
         .portal-box h3 {
-            color: #00ccff;
-            font-size: 20px;
-            margin: 0;
+            color: #ffd700;
+            font-size: 24px;
+            margin-bottom: 30px;
         }
 
+        a.forgot-password {
+            color: #ffd700; 
+        }
     </style>
 </head>
 <body>
 
     <div class="form-container">
-        <!-- Tech Experts Portal Box -->
+        
         <div class="portal-box">
             <h3>Welcome Technologists Portal!</h3>
         </div>
 
-        <h2>Login</h2> <!-- Added title for clarity -->
         <form id="loginForm">
             <div class="form-group">
                 <input type="text" id="emailPhone" name="emailPhone" placeholder="Username" required>
@@ -140,7 +134,7 @@
                 <button type="submit">Login</button>
             </div>
 
-            <a href="#">Forgot password?</a>
+            <a href="#" class="forgot-password">Forgot password?</a>
         </form>
 
         <div class="social-icons">
